Fixed issue where bet slip card was being pushed upwards by gap styles

--- a/dashboard-styles.css
+++ b/dashboard-styles.css
@@ -571,7 +571,7 @@ body, html {
             grid-template-rows: 0px;
             padding: 10px;
             padding-bottom: 0px;
-            gap: 10px;
+            column-gap: 10px;
         }
 
             .user-announcements {
